dto 추가적용, 키워드로직추가, 정렬로직리팩토링